- removed old overrides * enhanced icon API for context actions and subparameters + new environments icon * user-side rename of "Environment" to "Connected services"